testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-1.ebuild
DESCRIPTION="Ebuild with invalid SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
SLOT="0/1"
LICENSE="BSD"
